# insilico_mpra

./: .gitignore  LICENSE  README.md  evaluate.ipynb  pyproject.toml  run_train.sh  train.py
configs/: config.json
insilico_mpra/: config.py  generate.py  predict.py
insilico_mpra/data/: utils.py
insilico_mpra/models/: evoaug_lightning_module.py  legnet.py  lightning_module.py
insilico_mpra/utils/: dna_utils.py
mpralegnet/: __init__.py  config.py  predict.py
mpralegnet/data/: __init__.py  datasets.py
mpralegnet/models/: __init__.py  evoaug_lightning_module.py  lightning_module.py
mpralegnet/utils/: __init__.py  dna_utils.py  model_utils.py  visualization.py
scripts/1_train/: evaluate.ipynb  run_train.sh  train.py
scripts/2_generate/: analyze_library.ipynb  generate_library.ipynb  generate_library.py  get_attributions.ipynb
