[project]
name = "insilico_mpra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py==3.8.0",
    "lightning>=2.5.6",
    "matplotlib>=3.5.0",
    "numpy==1.25.0",
    "pandas==2.0.2",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "squid-nn>=0.4.8",
    "torch==2.5.1",
    "torchmetrics==0.11.4",
]

[dependency-groups]
dev = [
    "notebook>=7.4.3",
    "tangermeme>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["insilico_mpra*"]

[tool.ruff]
line-length = 100
